--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.h2.console.path=/h2-console
 
 #h2 db ??
 spring.datasource.url=jdbc:h2:~/test;
+#spring.datasource.url=jdbc:h2:~/test;AUTO_SERVER=true;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
